<resources>
    <string name="app_name">AGameofGames</string>


    <string name="resultString">[your results]</string>
    <string name="explanation">[input flavor text here aaaaaaaaaaaaaaaaaaaaaaaaasfdgfjhgkjhkhjdhshdjhfkjglkgjfhdshgdjhfkjgfdsdjhfkjgfhcvbguyftdhgcjvbhguofyidtjgchvhkfydtujgchkgukrhfviybuykhm]</string>
    <string name="homeButtonText">Return To\n Homepage</string>
    <string name="retakeButtonText">Retake\n Quiz</string>
    <string name="YouAre">You Are:</string>
    <string name="welcometo">Welcome To</string>
    <string name="gameofgames">A Game of Games</string>
    <string name="chooseyourfate">CHOOSE YOUR FATE!</string>
<<<<<<< HEAD
    <string name="whattypeofbred">What Type of Red Are You?</string>
=======
    <string name="typeofbread">What Type of Bread Are You?</string>
>>>>>>> c37b2f4efa3f7a49a620e484f18da7c6eb2055df
    <string name="canweguessyour">Can We Guess Your Bday?</string>
    <string name="disney">Which Disney Princess Are You?</string>
    <string name="haveyoualready">Have You Already Met Your Soulmate?</string>
    <string name="whatkindof">What Kind of Mermaid/Merman Are You?</string>
    <string name="canweguesswhat">Can We Guess What You\'re Wearing?</string>
    <string name="next">Next</string>

</resources>
