<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<TextView-->
        <!--android:id="@+id/textView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <!--<Button-->
        <!--android:id="@+id/button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="32dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:text="Button"-->
        <!--android:textColor="#FFFF"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <TextView
        android:id="@+id/welcometo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/welcometo"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/gameofgames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/gameofgames"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/chooseyourfate"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/chooseyourfate"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />
    <View
        android:id="@+id/rectangle_at_the_top"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:background="#007FFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--Button 1-->
    <Button
        android:id="@+id/canweguess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/canweguessyour"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@id/typeofbread"
        app:layout_constraintRight_toRightOf="@id/typeofbread"
        app:layout_constraintTop_toBottomOf="@id/chooseyourfate" />

    <!--Button 2-->

    <Button
        android:id="@+id/typeofbread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/typeofbread"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintLeft_toLeftOf="@id/gameofgames"
        app:layout_constraintRight_toRightOf="@id/gameofgames"
        app:layout_constraintTop_toBottomOf="@id/canweguess" />

    <!--Button 3-->


    <Button
        android:id="@+id/temper"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:text="Which temper are you?"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="@id/gameofgames"
        app:layout_constraintRight_toRightOf="@id/gameofgames"
        app:layout_constraintTop_toBottomOf="@id/typeofbread" />

    <!--Button 4-->

    <Button
        android:id="@+id/dominos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="What Domino's extra are you?"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintLeft_toLeftOf="@id/gameofgames"
        app:layout_constraintRight_toRightOf="@id/gameofgames"
        app:layout_constraintTop_toBottomOf="@id/temper" />

    <!--Button 5-->

    <!--<Button-->
        <!--android:id="@+id/temperment"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="60dp"-->
        <!--android:text="What Kind of Mermaid/Merman Would You Be?"-->
        <!--app:layout_constraintHorizontal_bias="0.458"-->
        <!--app:layout_constraintLeft_toLeftOf="@id/gameofgames"-->
        <!--app:layout_constraintRight_toRightOf="@id/gameofgames"-->
        <!--app:layout_constraintTop_toBottomOf="@id/temper" />-->
</android.support.constraint.ConstraintLayout>